postgresql-common (5) experimental; urgency=low

  * PgCommon.pm: internalize get/set_conf_value, export get/set_cluster_port
    instead.

 -- Martin Pitt <mpitt@debian.org>  Wed, 30 Mar 2005 21:59:23 +0200

postgresql-common (4) experimental; urgency=low

  * pg_upgradecluster: Uncomment library search path (artifact from
    debugging).
  * debian/postgresql-common.postinst: Don't create postgres user with home /,
    this can lead to problems sometimes.
  * pg_ctlcluster: Fixed pg_ctl invocation (dangling -o argument with versions
    < 8.0, caused errors when using dash as /bin/sh). Closes: #300896

 -- Martin Pitt <mpitt@debian.org>  Tue, 22 Mar 2005 23:32:47 +0100

postgresql-common (3) experimental; urgency=low

  * Add richer set of common maintainer scripts functions (for package
    removal, and also for client and contrib packages).
  * Use alternatives system to link manpages from
    /usr/share/postgresql/<version>/man/... to /usr/share/man.

 -- Martin Pitt <mpitt@debian.org>  Mon, 21 Mar 2005 00:33:22 +0100

postgresql-common (2) experimental; urgency=low

  * pg_wrapper: Check that specified cluster actually exists.
  * Fix some Perl warnings.
  * Added initial version of pg_upgradecluster(8).

 -- Martin Pitt <mpitt@debian.org>  Mon, 14 Mar 2005 17:51:22 +0100

postgresql-common (1) experimental; urgency=low

  * New package to provide a common infrastructure for different PostgreSQL
    versions. This finally fixes all bugs concerning failed automatic
    upgrades. Closes: #277700, #282803, #224047, #229240, #232553, #279184,
    #241337, #247261, #157282
  * pg_wrapper now has a central role for mapping clients to clusters, so it
    is not "overkill" any more. Closes: #201702

 -- Martin Pitt <mpitt@debian.org>  Sun, 20 Feb 2005 23:54:54 +0100
